# cumulus-aggregator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .python-version  .sqlfluff  .sqlfluffignore  MAINTAINER.md  README.md  pyproject.toml  template.hostedzone.yaml  template.proxy-stage.yaml  template.proxy.yaml  template.waf.yaml  template.yaml
.github/workflows/: ci.yaml
docs/: MAINTAINER.md  README.md  api.md  architecture.md  chart-api.md  dashboard-api.md  dashboard_api.prod.yaml  deployment.md  index.md  integration.md  site_integration.md  working_with_SAM.md
events/: event-dashboard-chart-request.json  event-fetch-upload-url.json  event-powerset-merge.json
examples/aws_events/: event-get-chart-data.json  event-powerset-merge.json
scripts/: bulk_csv_download.py  credential_management.py  cumulus_upload_data.py  delete_aggregates.py  delete_site_data.py  delete_site_metadata.py  hash_gen.py  migrate_versioning.py  presigned_post_poc.py  presigned_post_test.py  reprocess_site_data.py  reset_data_package_cache.py  upload_data.py
scripts/migrations/: MAINTAINER.md  migration.000.migrate_versioning.py  migration.001.transaction_cleanup.py  migration.002.column_types.py  migration.003.data_packages.py  migration.004.s3_name_with_id.py  migration.005.remove_site_data.py  migration.006.rename_flat_csvs.py  migration.006.rename_flay_csvs.py  migration.007.split_flats.py  migration.008.remove_csvs.py
src/: post_distribute.Dockerfile  queue_distribute.Dockerfile
src/dashboard/get_chart_data/: filter_config.py  get_chart_data.py  requirements.txt
src/dashboard/get_chart_data/templates/: filter_inline.sql.jinja  get_chart_data.sql.jinja  syntax.sql.jinja
src/dashboard/get_csv/: get_csv.py
src/dashboard/get_data_packages/: get_data_packages.py
src/dashboard/get_from_parquet/: get_from_parquet.py
src/dashboard/get_metadata/: get_metadata.py
src/dashboard/get_static/: get_static.py
src/dashboard/get_study_data/: get_study_data.py
src/dashboard/get_study_periods/: get_study_periods.py
src/dashboard/post_distribute/: post_distribute.py  requirements.txt
src/dashboard/queue_distribute/: queue_distribute.py  requirements.txt
src/handlers/: api_gateway_authorizer.py  enums.py  fetch_upload_url.py  powerset_merge.py  shared_functions.py  sites.template.json
src/handlers/dashboard/: filter_config.py  get_chart_data.py  get_csv.py  get_data_packages.py  get_metadata.py  get_study_periods.py  get_subscriptions.py  poc.py
src/handlers/shared/: awswrangler_functions.py  decorators.py  enums.py  functions.py
src/handlers/site_data/: auth.template.json  metadata.template.json
src/handlers/site_upload/: api_gateway_authorizer.py  cache_api.py  enums.py  fetch_upload_url.py  powerset_merge.py  process_upload.py  study_period.py
src/handlers/site_upload/site_data/: auth.template.json
src/shared/: awswrangler_functions.py  decorators.py  enums.py  errors.py  functions.py  pandas_functions.py  s3_manager.py
src/site_upload/api_gateway_authorizer/: api_gateway_authorizer.py
src/site_upload/cache_api/: cache_api.py
src/site_upload/check_if_complete/: check_if_complete.py
src/site_upload/fetch_upload_url/: fetch_upload_url.py
src/site_upload/lockfile_cleanup/: lockfile_cleanup.py
src/site_upload/powerset_merge/: powerset_merge.py
src/site_upload/process_flat/: process_flat.py
src/site_upload/process_manifest/: process_manifest.py
src/site_upload/process_upload/: process_upload.py
src/site_upload/study_period/: study_period.py
src/site_upload/transaction_cleanup/: transaction_cleanup.py
src/site_upload/unzip_upload/: unzip_upload.py
src/site_upload/update_metadata/: update_metadata.py
tests/: conftest.py  mock_utils.py  requirements.txt  test_api_gateway_authorizer.py  test_fetch_upload_url.py  test_integration.py  test_powerset_merge.py  utils.py
tests/aws/site_upload/: test_api_gateway_authorizer.py  test_fetch_upload_url.py  test_powerset_merge.py
tests/dashboard/: test_filter_config.py  test_filter_inline.py  test_filter_inline.sql.jinja  test_get_chart_data.py  test_get_csv.py  test_get_data_packages.py  test_get_from_parquet.py  test_get_metadata.py  test_get_static.py  test_get_study_data.py  test_get_study_periods.py  test_get_subscriptions.py  test_post_distribute.py  test_queue_distribute.py
tests/integration/: test_api_gateway.py
tests/shared/: test_awswrangler_functions.py  test_functions.py  test_s3_manager.py
tests/site_upload/: test_api_gateway_authorizer.py  test_cache_api.py  test_check_if_complete.py  test_fetch_upload_url.py  test_lockfile_cleanup.py  test_powerset_merge.py  test_process_flat.py  test_process_manifest.py  test_process_upload.py  test_study_period.py  test_transaction_cleanup.py  test_unzip_upload.py  test_update_metadata.py
tests/test_data/: TESTING.md  count_synthea_empty.csv  count_synthea_empty.parquet  count_synthea_patient.csv  count_synthea_patient.parquet  count_synthea_patient_agg.csv  count_synthea_patient_agg.parquet  cube_response.json  cube_response_filtered.json  cube_response_filtered_stratified.json  cube_response_stratified.json  cube_simple_example.csv  cube_simple_example.parquet  cube_strings_with_commas.csv  cube_strings_with_commas.parquet  data_packages_cache.json  flat_synthea_q_date_recent.parquet  manifest.toml  meta_date.csv  meta_date.parquet  mock_cube_col_types.csv  mock_cube_col_types.parquet  other_schema.csv  other_schema.parquet  studies_cache.json
tests/test_data/exports/: README.md
tests/test_data/mock_payloads/test_study/: foo.sql  foobar.sql  manifest.toml
