[project]
name = "aggregator"
version = "0.1.0"
# This project is designed to run on the AWS serverless application framework (SAM).
# The project dependencies are handled via AWS layers. These are only required for
# local development.
dependencies= [
    "awswrangler >=2.19.0, <3",
    "boto3",
    "pandas >=1.5.0, <2"
]
authors = [
  { name="Matt Garber", email="matthew.garber@childrens.harvard.edu" },
]
description = "Aggregates data from distributed hopsitals for display in Cumulus dashboard"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/smart-on-fhir/cumulus-aggregator"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=63.2.0",
    "wheel ~=0.37.1",
]

[project.optional-dependencies]
test = [
    # TODO: We are investigating some new features around athena mocks, 
    # which currently only exist in 4.1.5 and are broken in 4.1.6dev. Swing back
    # around on this as the functionality matures.
    "moto[s3,athena] == 4.1.5",
    "pytest",
    "pytest-mock"
]
dev = [
    "bandit",
    "black==22.12.0",
    "pre-commit",
    "pylint",
    "pycodestyle"

]
