[project]
name = "aggregator"
requires-python = ">= 3.10"
version = "0.3.0"
# This project is designed to run on the AWS serverless application framework (SAM).
# The project dependencies are handled via AWS layers. These are only required for
# local development.
dependencies= [
    "arrow >=1.2.3",
    "awswrangler >=3.5, <4",
    "boto3",
    "pandas >=2, <3"
]
authors = [
  { name="Matt Garber", email="matthew.garber@childrens.harvard.edu" },
]
description = "Aggregates data from distributed hopsitals for display in Cumulus dashboard"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/smart-on-fhir/cumulus-aggregator"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=63.2.0",
    "wheel ~=0.37.1",
]

[project.optional-dependencies]
test = [
    # TODO: We are investigating some new features around athena mocks, 
    # which currently only exist in 4.1.5 and are broken in 4.1.6dev. Swing back
    # around on this as the functionality matures.
    "coverage >=7.3.1",
    "freezegun",
    "moto[s3,athena,sns] == 4.1.5",
    "pytest",
    "pytest-mock"
]
dev = [
    "ruff == 0.2.1",
    "pre-commit",
]
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "ISC",  # implicit string concatenation
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "UP",  # alert you when better syntax is available in your python version
]
ignore = [
# Recommended ingore from `ruff format` due to in-project conflicts with check.
# It's expected that this will be fixed in the coming months.
    "ISC001"
]
